--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,31 @@
   color: #f30f0f; 
   font-weight: bold; 
 }
+
+.boton-buscarproductos {
+  padding: 0.25rem 0.5rem;          
+  background-color: #f9fafb;  
+  color: #222;                      
+  border: 1px solid #d1d5db;         
+  border-radius: 0.375rem;          
+  cursor: pointer;
+  margin-bottom: 1rem;               
+  box-shadow: 0 1px 2px 0 #0001;     
+  transition: background 0.2s, color 0.2s;
+}
+
 .boton-personalizado {
-  padding: 8px 16px;
-  background-color: #333;
+  padding: 5px 10px;
+  background-color: #455ec3;
+  color: #ffffff;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.boton-paginación {
+  padding: 5px 10px;
+  background-color: #444;
   color: #fff;
   border: none;
   border-radius: 6px;
